--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <link type="text/css" rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
+ <a href="https://www.example.com" onclick="event.preventDefault();"/>
  <elevenlabs-convai agent-id="FVTxUiLXvq4vQAvbtR8o"></elevenlabs-convai>
   <script src="https://elevenlabs.io/convai-widget/index.js" async type="text/javascript"></script>
 <!-- Inicio del código -->
