--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 <html>
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>
+        // Previene la visualización de la URL en la barra de estado al pasar el cursor por encima
+        document.addEventListener('DOMContentLoaded', function() {
+            const links = document.querySelectorAll('a');
+            links.forEach(link => {
+                link.addEventListener('mouseover', function(event) {
+                    // Establece un título vacío para evitar que se muestre la URL
+                    event.target.title = '';
+                });
+            });
+        });
+    </script>
     <title>Ejemplo Responsivo</title>
     <style>
         /* Estilos generales */
